data/derived/comb/progs/unify/prog3897.ml.out
Characters 372-378:
  | VarY -> exprToString buildY
                         ^^^^^^
Error: This expression has type unit -> expr
       but an expression was expected of type expr
